# jftt

./: README.md
lista1/: CMakeLists.txt  main.cpp
lista1/algorithms/: Alphabet.cpp  Alphabet.h  FiniteAutomatonMatcher.cpp  FiniteAutomatonMatcher.h  FunctionMap.cpp  FunctionMap.h  Pattern.cpp  Pattern.h  PatternMatcher.cpp  PatternMatcher.h
lista1kotlin/src/: Main.kt
lista1kotlin/src/algorithms/: PatternMatcherInterface.kt
lista1kotlin/src/algorithms/automaton/: AutomatonPatternMatcher.kt  FiniteAutomatonMatcher.kt  TransitionFunction.kt  TransitionFunctionFactory.kt
lista1kotlin/src/algorithms/kmp/: KMPPatterMatcher.kt  KnuthMorrisPrattMatcher.kt  PrefixFunction.kt  PrefixFunctionFactory.kt
lista2/: .gitignore  1.l  2.l  3.l  4.l
lista2/examples/: 1  2.xml  3.c  4
lista2/stack/: stack.c  stack.h  stack.h.gch
lista3/: .gitignore  calc.ypp  lex.l
